debug Traefik [drop]

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
     ports:
       # todo: change to 80:80
       - "8080:80"
+      # # todo: change to 443:443
+      # - "8443:443"
       # todo: change to 8080:8080
       # web UI, Prometheus, etc.
       - "8081:8080"
@@ -21,6 +23,24 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     healthcheck:
       test: "traefik healthcheck"
+
+  # todo: remove
+  whoami:
+    networks: [ipl]
+    image: traefik/whoami
+    # command: -verbose # todo: remove
+    labels:
+      - "traefik.enable=true"
+      # expose under /whoami
+      - "traefik.http.routers.whoami.rule=PathPrefix(`/whoami`)"
+      - "traefik.http.routers.whoami.middlewares=whoami-stripprefix"
+      - "traefik.http.middlewares.whoami-stripprefix.stripprefix.prefixes=/whoami"
+      # health check on /health, every 10s, 3s timeout
+      - "traefik.http.services.whoami.loadbalancer.healthcheck.path=/health"
+      - "traefik.http.services.whoami.loadbalancer.healthcheck.interval=10s"
+      - "traefik.http.services.whoami.loadbalancer.healthcheck.timeout=3s"
+    expose:
+      - "80"
 
   # This service applies a couple of conversions for certain GBFS feeds to fix
   # syntax issues which prevent importing in Lamassu.
@@ -152,8 +172,8 @@ services:
   dagster-dagit:
     networks: [ipl]
     image: ${DAGSTER_DAGIT_IMAGE}
-    expose:
-      - "3000"
+    # expose:
+    #   - "3000"
     ports:
       - "3000:3000"
     environment:
