Add comment for LAMASSU_BASE_URL

--- a/.env
+++ b/.env
@@ -6,6 +6,9 @@ LAMASSU_IMAGE=mfdz/lamassu:latest
 LAMASSU_PORT=8500
 LAMASSU_ADMIN_PORT=9002
 LAMASSU_ADMIN_PASSWORD=secret
+# NOTE: LAMASSU_BASE_URL should be the host machine's DNS namme / IP address.
+# i.e. it must be accessible from inside docker containers, i.e. dagster-pipeline.
+# Define this variable e.g. in .env.local with http://my-machines-ip:8500
 LAMASSU_BASE_URL=http://lamassu:8080
 
 # postgis variables
