Compose file: add name "ipl" 💥
This causes *all* Compose resources (containers, volumes, etc.) to get a new name.
Therefore, existing resources with the old name won't be deleted by e.g. `docker compose rm`.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,6 @@
+# compose "namespace", prepended to all network names, container names, etc.
+name: ipl
+
 services:
   # This service applies a couple of conversions for certain GBFS feeds to fix
   # syntax issues which prevent importing in Lamassu.
