geoserver: add "gtfs-db" store & "stops" layer

--- a/.env.local.example
+++ b/.env.local.example
@@ -24,3 +24,9 @@ DAGSTER_POSTGRES_PASSWORD=
 # todo: find a container-env-var-based solution to configure the Geoserver
 # A random password which will be used for our central postgresql database. Should be long and should not contain special signs.
 IPL_POSTGRES_PASSWORD=
+IPL_GTFS_DB_POSTGRES_PASSWORD=
+# Currently we have to adapt this variable manually, to the latest imported GTFS database.
+# Run the following command to list all databases within `gtfs-db`:
+# 	docker compose --env-file .env --env-file .env.local exec gtfs-db /bin/sh -c 'env PGPASSWORD="$POSTGRES_PASSWORD" psql -U "$POSTGRES_USER" -d "$POSTGRES_DB" -t -c "SELECT datname AS db FROM pg_catalog.pg_database"'
+# todo: let gtfs-importer write `IPL_GTFS_DB_POSTGRES_DB`'s value
+IPL_GTFS_DB_POSTGRES_DB=gtfs_…
