--- a/.env.local.example
+++ b/.env.local.example
@@ -1,6 +1,17 @@
+# A random password for the lamassu admin user. Should be long and should not contain special signs.
 LAMASSU_ADMIN_PASSWORD=
+
+# Should be the host machine's DNS namme / IP address. It must be accessible from inside docker containers, i.e. dagster-pipeline.
+# Usually the IP of the host docker runs at will be fine: http://my-machines-ip:8500
 LAMASSU_BASE_URL=http://10.70.172.11:8500
+
+# A random password which will be used for our central postgresql database. Should be long and should not contain special signs.
 IPL_POSTGRES_PASSWORD=
+
+# User and password from Deer
 DEER_USER=
 DEER_PASSWORD=
+
+# A random password which will be used for the postgresql database which is used by Dagster. Should be long and should not contain special
+# signs.
 DAGSTER_POSTGRES_PASSWORD=
