add gtfs-swagger-ui service

--- a/.env
+++ b/.env
@@ -42,3 +42,6 @@ IPL_GTFS_API_PORT=4000
 # todo
 # IPL_GTFS_API_PUBLIC_BASE_URL=https://ipl-dev.mobidata-bw.de/gtfs/
 IPL_GTFS_API_PUBLIC_BASE_URL=http://localhost:4000/
+
+# gtfs-swagger-ui variables
+IPL_GTFS_SWAGGER_UI_PORT=4001
