gtfs-db: specify Docker repo in .env

--- a/.env
+++ b/.env
@@ -31,7 +31,7 @@ DAGSTER_POSTGRES_PASSWORD=postgres_password
 DAGSTER_POSTGRES_DB=postgres_db
 
 # gtfs-db variables
-IPL_GTFS_DB_POSTGIS_VERSION_TAG=15-3.3-alpine
+IPL_GTFS_DB_IMAGE=postgis/postgis:15-3.3-alpine
 IPL_GTFS_DB_POSTGRES_USER=postgres
 IPL_GTFS_DB_POSTGRES_PASSWORD=password
 IPL_GTFS_DB_POSTGRES_DB=gtfs_importer
