--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,8 @@ services:
     depends_on:
         redis:
           condition: service_healthy
+        transformer-proxy:
+          condition: service_started
 
   redis:
     image: redis:6-alpine
