--- a/gtfs-importer/Dockerfile
+++ b/gtfs-importer/Dockerfile
@@ -1,6 +1,5 @@
-# todo: this base image is Prosperity-dual-licensed, obtain a purely Apache-licensed one
-FROM ghcr.io/public-transport/gtfs-via-postgres:4
-LABEL org.opencontainers.image.title="GTFS importer, based on gtfs-via-postgres"
+FROM node:20-bookworm-slim
+LABEL org.opencontainers.image.title="GTFS importer, using gtfs-via-postgres to import GTFS data into PostgreSQL."
 LABEL org.opencontainers.image.authors="MobiData-BW IPL contributors <mobidata-bw@nvbw.de>"
 
 WORKDIR /importer
@@ -8,14 +7,18 @@ WORKDIR /importer
 ENV TERM=xterm-256color
 
 # moreutils is needed for sponge
-# ncurses is needed for tput
-RUN apk update && apk add --no-cache \
+# postgresql-client is needed for psql
+RUN apt update && apt install -y \
 	bash \
 	moreutils \
-	ncurses \
+	postgresql-client \
 	unzip \
 	wget \
-	zstd
+	zstd \
+	&& rm -rf /var/lib/apt/lists/*
+
+# todo: gtfs-via-postgres is Prosperity-dual-licensed, obtain a purely Apache-licensed version
+RUN npm install -g gtfs-via-postgres@4
 
 ADD package.json ./
 RUN npm install --omit dev && npm cache clean --force
