Increase temporarilly reduced update frequency again
With https://github.com/mobidata-bw/ipl-proxy/pull/15, ttls will be fixed so lamassu can respect request limits

--- a/etc/lamassu/application.properties
+++ b/etc/lamassu/application.properties
@@ -50,9 +50,10 @@ org.entur.lamassu.internalLoadBalancer=http://localhost:8080
 
 org.entur.lamassu.serializationVersion=1
 
-# TODO temporarilly augment feedupdateinterval to 4min to not exceed DB Connect limits for RegioRad.
-# Mid-term, this could be solved by the ipl-proxy caching requests
-org.entur.lamassu.feedupdateinterval:240000
+# To temporarilly augment feedupdateinterval to 4min to not exceed DB Connect limits for RegioRad,
+# uncomment the following setting.
+# This should be solved by correct ttl information by DB Connect.
+#org.entur.lamassu.feedupdateinterval:240000
 
 ## Enable validation for all feeds
 org.entur.lamassu.enableValidation=true
