Add CaB and CaBICE feeds

--- a/etc/lamassu/feedproviders.yml
+++ b/etc/lamassu/feedproviders.yml
@@ -19,6 +19,30 @@ lamassu:
         properties:
           DB-Client-Id: ${LAMASSU_DB_CONNECT_CLIENT_ID}
           DB-Api-Key: ${LAMASSU_DB_CONNECT_API_KEY}
+    - systemId: callabike
+      operatorId: CAB:Operator:callabike
+      operatorName: Call-A-Bike
+      codespace: CAB
+      # Note: dbconnect feeds are accessed via proxy, using http instead of https 
+      url: "http://apis.deutschebahn.com/db-api-marketplace/apis/shared-mobility-gbfs/2-2/de/CallABike/gbfs"
+      language: de
+      authentication:
+        scheme: httpHeaders
+        properties:
+          DB-Client-Id: ${LAMASSU_DB_CONNECT_CLIENT_ID}
+          DB-Api-Key: ${LAMASSU_DB_CONNECT_API_KEY}
+    - systemId: callabike_ice
+      operatorId: CAB:Operator:callabike
+      operatorName: Call-A-Bike
+      codespace: CAB
+      # Note: dbconnect feeds are accessed via proxy, using http instead of https 
+      url: "http://apis.deutschebahn.com/db-api-marketplace/apis/shared-mobility-gbfs/2-2/de/CallABikeICE/gbfs"
+      language: de
+      authentication:
+        scheme: httpHeaders
+        properties:
+          DB-Client-Id: ${LAMASSU_DB_CONNECT_CLIENT_ID}
+          DB-Api-Key: ${LAMASSU_DB_CONNECT_API_KEY}
     - systemId: bird-ulm
       operatorId: BRD:Operator:bird
       operatorName: bird
