Increase REDIS_MEMORY_DB

--- a/.env
+++ b/.env
@@ -8,6 +8,9 @@ LAMASSU_ADMIN_PORT=9002
 LAMASSU_ADMIN_PASSWORD=secret
 LAMASSU_BASE_URL=http://lamassu:8080
 
+# redis variables
+REDIS_MEMORY_MB=512
+
 # postgis variables
 IPL_POSTGIS_IMAGE=postgis/postgis:15-3.3-alpine
 IPL_POSTGRES_PORT=5432
