Add .env.local.example to docker compose config validation

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -17,4 +17,4 @@ jobs:
 
     - name: validate docker-compose.yml
       run: |
-        docker compose config
+        docker compose --env-file .env --env-file .env.local.example config
