--- a/.env.local.example
+++ b/.env.local.example
@@ -5,6 +5,10 @@ LAMASSU_ADMIN_PASSWORD=
 # Usually the IP of the host docker runs at will be fine: http://my-machines-ip:8500
 LAMASSU_BASE_URL=http://10.70.172.11:8500
 
+# Credentials for DbConnect API. Mind the rate limit. transformer-proxy will set ttls for static/dynamic feeds. The required ttls need to be set matching the approved rate limits.
+LAMASSU_DB_CONNECT_CLIENT_ID=client
+LAMASSU_DB_CONNECT_API_KEY=secret
+
 # A random password which will be used for our central postgresql database. Should be long and should not contain special signs.
 IPL_POSTGRES_PASSWORD=
 
@@ -15,5 +19,3 @@ DEER_PASSWORD=
 # A random password which will be used for the postgresql database which is used by Dagster. Should be long and should not contain special
 # signs.
 DAGSTER_POSTGRES_PASSWORD=
-LAMASSU_DB_CONNECT_CLIENT_ID=
-LAMASSU_DB_CONNECT_API_KEY=
