--- a/.env.local.example
+++ b/.env.local.example
@@ -16,3 +16,6 @@ DEER_PASSWORD=
 # A random password which will be used for the postgresql database which is used by Dagster. Should be long and should not contain special
 # signs.
 DAGSTER_POSTGRES_PASSWORD=
+
+# A random password for geoserver admin access
+GEOSERVER_ADMIN_PASSWORD=FNn71ymEeBJ13VHd
