geoserver: read config from env vars only 💚
Turns out that Geoserver *can* read config parameter's values from env vars!

related: #21

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -15,6 +15,9 @@ jobs:
     - name: checkout
       uses: actions/checkout@v4
 
+    - name: make init
+      run: |
+        make init
     - name: validate docker-compose.yml
       run: |
         docker compose --env-file .env --env-file .env.local.example config
