--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -122,6 +122,10 @@ services:
       - ./etc/geoserver/global.xml:/opt/geoserver/data_dir/global.xml
       - ./etc/geoserver/logging.xml:/opt/geoserver/data_dir/logging.xml
       - ./etc/geoserver/workspaces:/opt/geoserver/data_dir/workspaces
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.geoserver.rule=PathPrefix(`/geoserver`)"
+      - "traefik.http.services.geoserver.loadbalancer.server.port=8080"
     ports:
       - ${GEOSERVER_PORT}:8080
     restart: on-failure
