--- a/etc/lamassu/application.properties
+++ b/etc/lamassu/application.properties
@@ -5,7 +5,7 @@ management.endpoint.info.enabled=true
 management.endpoint.health.enabled=true
 management.endpoint.health.group.readiness.include=readinessState
 management.endpoint.prometheus.enabled=true
-management.endpoints.web.exposure.include=info,health,prometheus
+management.endpoints.web.exposure.include=info,health,prometheus,admin
 management.health.redis.enabled=true
 
 # Logging
