--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,6 +64,10 @@ services:
       LAMASSU_DB_CONNECT_API_KEY: ${LAMASSU_DB_CONNECT_API_KEY:?'missing/empty env var $LAMASSU_DB_CONNECT_API_KEY'}
       # depending on base image, JAVA_TOOL_OPTIONS must be used
       LAMASSU_BASE_URL: ${LAMASSU_BASE_URL}
+      # Bolt authentification
+      - BOLT_API_URL
+      - BOLT_USER
+      - BOLT_PASSWORD
       JDK_JAVA_OPTIONS:
         -Dspring.config.location=/etc/application-config/application.properties
         -Dspring.profiles.active=leader
