--- a/.env.local.example
+++ b/.env.local.example
@@ -13,6 +13,10 @@ LAMASSU_DB_CONNECT_API_KEY=secret
 DEER_USER=
 DEER_PASSWORD=
 
+# User and password from Bolt
+BOLT_USER=
+BOLT_PASSWORD=
+
 # A random password which will be used for the postgresql database which is used by Dagster. Should be long and should not contain special
 # signs.
 DAGSTER_POSTGRES_PASSWORD=
