--- a/.env
+++ b/.env
@@ -25,9 +25,9 @@ DEER_USER=api_user@nvbw.de
 DEER_PASSWORD=secret
 
 # lamassu variables
-DEER_API_URL=https://mds.bolt.eu/gbfs/auth
-DEER_USER=api_user@nvbw.de
-DEER_PASSWORD=secret
+BOLT_API_URL=https://mds.bolt.eu/gbfs/auth
+BOLT_USER=api_user@nvbw.de
+BOLT_PASSWORD=secret
 
 # dagster variables
 DAGSTER_POSTGRES_IMAGE=postgres:15.4-bullseye
