--- a/.env
+++ b/.env
@@ -24,6 +24,11 @@ DEER_API_URL=https://deer.fleetster.de
 DEER_USER=api_user@nvbw.de
 DEER_PASSWORD=secret
 
+# lamassu variables
+BOLT_API_URL=https://mds.bolt.eu/gbfs/auth
+BOLT_USER=api_user@nvbw.de
+BOLT_PASSWORD=secret
+
 # dagster variables
 DAGSTER_POSTGRES_IMAGE=postgres:15.4-bullseye
 DAGSTER_PIPELINE_IMAGE=ghcr.io/mobidata-bw/dagster-pipeline:latest
