--- a/.env.local.example
+++ b/.env.local.example
@@ -8,14 +8,12 @@ LAMASSU_BASE_URL=http://10.70.172.11:8500
 # Credentials for DbConnect API. Mind the rate limit. transformer-proxy will set ttls for static/dynamic feeds. The required ttls need to be set matching the approved rate limits.
 LAMASSU_DB_CONNECT_CLIENT_ID=client
 LAMASSU_DB_CONNECT_API_KEY=secret
+LAMASSU_BOLT_USER=client
+LAMASSU_BOLT_PASSWORD=secret
 
 # User and password from Deer
 DEER_USER=
 DEER_PASSWORD=
-
-# User and password from Bolt
-BOLT_USER=
-BOLT_PASSWORD=
 
 # A random password which will be used for the postgresql database which is used by Dagster. Should be long and should not contain special
 # signs.
