--- a/.env.local.example
+++ b/.env.local.example
@@ -10,6 +10,7 @@ LAMASSU_DB_CONNECT_CLIENT_ID=client
 LAMASSU_DB_CONNECT_API_KEY=secret
 
 # Credentials for Bolt.
+LAMASSU_BOLT_API_URL=client
 LAMASSU_BOLT_USER=client
 LAMASSU_BOLT_PASSWORD=secret
 
