--- a/etc/lamassu/feedproviders.yml
+++ b/etc/lamassu/feedproviders.yml
@@ -101,6 +101,12 @@ lamassu:
       codespace: BLT
       url: "https://mds.bolt.eu/gbfs/2/1352/gbfs"
       language: en
+      authentication:
+        sheme: OAUTH2_CLIENT_CREDENTIALS_GRANT
+        properties:
+          tokenUrl: ${LAMASSU_BOLT_API_URL}
+          clientId: ${LAMASSU_BOLT_USER}
+          clientPassword: ${LAMASSU_BOLT_PASSWORD}
     - systemId: bolt_stuttgart
       operatorId: BLT:Operator:bolt
       operatorName: Bolt
