--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,6 +80,9 @@ services:
     environment:
       LAMASSU_DB_CONNECT_CLIENT_ID: ${LAMASSU_DB_CONNECT_CLIENT_ID:?'missing/empty env var $LAMASSU_DB_CONNECT_CLIENT_ID'}
       LAMASSU_DB_CONNECT_API_KEY: ${LAMASSU_DB_CONNECT_API_KEY:?'missing/empty env var $LAMASSU_DB_CONNECT_API_KEY'}
+      LAMASSU_TIER_API_URL: ${LAMASSU_TIER_API_URL:?'missing/empty env var $LAMASSU_TIER_API_URL'}
+      LAMASSU_TIER_USER: ${LAMASSU_TIER_USER:?'missing/empty env var $LAMASSU_TIER_USER'}
+      LAMASSU_TIER_PASSWORD: ${LAMASSU_TIER_PASSWORD:?'missing/empty env var $LAMASSU_TIER_PASSWORD'}
       # depending on base image, JAVA_TOOL_OPTIONS must be used
       LAMASSU_BASE_URL: ${LAMASSU_BASE_URL}
       JDK_JAVA_OPTIONS:
