--- a/.env.local.example
+++ b/.env.local.example
@@ -9,6 +9,11 @@ LAMASSU_BASE_URL=http://10.70.172.11:8500
 LAMASSU_DB_CONNECT_CLIENT_ID=client
 LAMASSU_DB_CONNECT_API_KEY=secret
 
+# Credentials for Tier.
+LAMASSU_TIER_API_URL=client
+LAMASSU_TIER_USER=client
+LAMASSU_TIER_PASSWORD=secret
+
 # User and password from Deer
 DEER_USER=
 DEER_PASSWORD=
