--- a/etc/lamassu/feedproviders.yml
+++ b/etc/lamassu/feedproviders.yml
@@ -101,90 +101,180 @@ lamassu:
       codespace: TIE
       url: "https://platform.tier-services.io/data-sharing/tier_stuttgart/gbfs/2.3"
       language: en
+      authentication:
+        sheme: OAUTH2_CLIENT_CREDENTIALS_GRANT
+        properties:
+          tokenUrl: ${LAMASSU_TIER_API_URL}
+          clientId: ${LAMASSU_TIER_USER}
+          clientPassword: ${LAMASSU_TIER_PASSWORD}
     - systemId: tier_mannheim-ludwigshafen
       operatorId: TIE:Operator:tier
       operatorName: Tier
       codespace: TIE
       url: "https://platform.tier-services.io/data-sharing/tier_mannheim-ludwigshafen/gbfs/2.3"
       language: en
+      authentication:
+        sheme: OAUTH2_CLIENT_CREDENTIALS_GRANT
+        properties:
+          tokenUrl: ${LAMASSU_TIER_API_URL}
+          clientId: ${LAMASSU_TIER_USER}
+          clientPassword: ${LAMASSU_TIER_PASSWORD}
     - systemId: tier_friedrichshafen
       operatorId: TIE:Operator:tier
       operatorName: Tier
       codespace: TIE
       url: "https://platform.tier-services.io/data-sharing/tier_friedrichshafen/gbfs/2.3"
       language: en
+      authentication:
+        sheme: OAUTH2_CLIENT_CREDENTIALS_GRANT
+        properties:
+          tokenUrl: ${LAMASSU_TIER_API_URL}
+          clientId: ${LAMASSU_TIER_USER}
+          clientPassword: ${LAMASSU_TIER_PASSWORD}
     - systemId: tier_pfullingen
       operatorId: TIE:Operator:tier
       operatorName: Tier
       codespace: TIE
       url: "https://platform.tier-services.io/data-sharing/tier_pfullingen/gbfs/2.3"
       language: en
+      authentication:
+        sheme: OAUTH2_CLIENT_CREDENTIALS_GRANT
+        properties:
+          tokenUrl: ${LAMASSU_TIER_API_URL}
+          clientId: ${LAMASSU_TIER_USER}
+          clientPassword: ${LAMASSU_TIER_PASSWORD}
     - systemId: tier_schwabach
       operatorId: TIE:Operator:tier
       operatorName: Tier
       codespace: TIE
       url: "https://platform.tier-services.io/data-sharing/tier_schwabach/gbfs/2.3"
       language: en
+      authentication:
+        sheme: OAUTH2_CLIENT_CREDENTIALS_GRANT
+        properties:
+          tokenUrl: ${LAMASSU_TIER_API_URL}
+          clientId: ${LAMASSU_TIER_USER}
+          clientPassword: ${LAMASSU_TIER_PASSWORD}
     - systemId: tier_rastatt
       operatorId: TIE:Operator:tier
       operatorName: Tier
       codespace: TIE
       url: "https://platform.tier-services.io/data-sharing/tier_rastatt/gbfs/2.3"
       language: en
+      authentication:
+        sheme: OAUTH2_CLIENT_CREDENTIALS_GRANT
+        properties:
+          tokenUrl: ${LAMASSU_TIER_API_URL}
+          clientId: ${LAMASSU_TIER_USER}
+          clientPassword: ${LAMASSU_TIER_PASSWORD}
     - systemId: tier_boeblingen
       operatorId: TIE:Operator:tier
       operatorName: Tier
       codespace: TIE
       url: "https://platform.tier-services.io/data-sharing/tier_boeblingen/gbfs/2.3"
       language: en
+      authentication:
+        sheme: OAUTH2_CLIENT_CREDENTIALS_GRANT
+        properties:
+          tokenUrl: ${LAMASSU_TIER_API_URL}
+          clientId: ${LAMASSU_TIER_USER}
+          clientPassword: ${LAMASSU_TIER_PASSWORD}
     - systemId: tier_tubingen
       operatorId: TIE:Operator:tier
       operatorName: Tier
       codespace: TIE
       url: "https://platform.tier-services.io/data-sharing/tier_tubingen/gbfs/2.3"
       language: en
+      authentication:
+        sheme: OAUTH2_CLIENT_CREDENTIALS_GRANT
+        properties:
+          tokenUrl: ${LAMASSU_TIER_API_URL}
+          clientId: ${LAMASSU_TIER_USER}
+          clientPassword: ${LAMASSU_TIER_PASSWORD}
     - systemId: tier_sindelfingen
       operatorId: TIE:Operator:tier
       operatorName: Tier
       codespace: TIE
       url: "https://platform.tier-services.io/data-sharing/tier_sindelfingen/gbfs/2.3"
       language: en
+      authentication:
+        sheme: OAUTH2_CLIENT_CREDENTIALS_GRANT
+        properties:
+          tokenUrl: ${LAMASSU_TIER_API_URL}
+          clientId: ${LAMASSU_TIER_USER}
+          clientPassword: ${LAMASSU_TIER_PASSWORD}
     - systemId: tier_ludwigsburg
       operatorId: TIE:Operator:tier
       operatorName: Tier
       codespace: TIE
       url: "https://platform.tier-services.io/data-sharing/tier_ludwigsburg/gbfs/2.3"
       language: en
+      authentication:
+        sheme: OAUTH2_CLIENT_CREDENTIALS_GRANT
+        properties:
+          tokenUrl: ${LAMASSU_TIER_API_URL}
+          clientId: ${LAMASSU_TIER_USER}
+          clientPassword: ${LAMASSU_TIER_PASSWORD}
     - systemId: tier_neckarsulm
       operatorId: TIE:Operator:tier
       operatorName: Tier
       codespace: TIE
       url: "https://platform.tier-services.io/data-sharing/tier_neckarsulm/gbfs/2.3"
       language: en
+      authentication:
+        sheme: OAUTH2_CLIENT_CREDENTIALS_GRANT
+        properties:
+          tokenUrl: ${LAMASSU_TIER_API_URL}
+          clientId: ${LAMASSU_TIER_USER}
+          clientPassword: ${LAMASSU_TIER_PASSWORD}
     - systemId: tier_reutlingen
       operatorId: TIE:Operator:tier
       operatorName: Tier
       codespace: TIE
       url: "https://platform.tier-services.io/data-sharing/tier_reutlingen/gbfs/2.3"
       language: en
+      authentication:
+        sheme: OAUTH2_CLIENT_CREDENTIALS_GRANT
+        properties:
+          tokenUrl: ${LAMASSU_TIER_API_URL}
+          clientId: ${LAMASSU_TIER_USER}
+          clientPassword: ${LAMASSU_TIER_PASSWORD}
     - systemId: tier_heilbronn
       operatorId: TIE:Operator:tier
       operatorName: Tier
       codespace: TIE
       url: "https://platform.tier-services.io/data-sharing/tier_heilbronn/gbfs/2.3"
       language: en
+      authentication:
+        sheme: OAUTH2_CLIENT_CREDENTIALS_GRANT
+        properties:
+          tokenUrl: ${LAMASSU_TIER_API_URL}
+          clientId: ${LAMASSU_TIER_USER}
+          clientPassword: ${LAMASSU_TIER_PASSWORD}
     - systemId: tier_karlsruhe
       operatorId: TIE:Operator:tier
       operatorName: Tier
       codespace: TIE
       url: "https://platform.tier-services.io/data-sharing/tier_karlsruhe/gbfs/2.3"
       language: en
+      authentication:
+        sheme: OAUTH2_CLIENT_CREDENTIALS_GRANT
+        properties:
+          tokenUrl: ${LAMASSU_TIER_API_URL}
+          clientId: ${LAMASSU_TIER_USER}
+          clientPassword: ${LAMASSU_TIER_PASSWORD}
     - systemId: tier_heidelberg
       operatorId: TIE:Operator:tier
       operatorName: Tier
       codespace: TIE
       url: "https://platform.tier-services.io/data-sharing/tier_heidelberg/gbfs/2.3"
       language: en
+      authentication:
+        sheme: OAUTH2_CLIENT_CREDENTIALS_GRANT
+        properties:
+          tokenUrl: ${LAMASSU_TIER_API_URL}
+          clientId: ${LAMASSU_TIER_USER}
+          clientPassword: ${LAMASSU_TIER_PASSWORD}
     # Freiburg
     - systemId: roxy_freiburg
       operatorId: RXY:Operator:roxy
