Add VOI and lastenvelo_fr to x2gbfs and lamassu

--- a/.env.local.example
+++ b/.env.local.example
@@ -13,9 +13,13 @@ LAMASSU_DB_CONNECT_API_KEY=secret
 LAMASSU_BOLT_CLIENT_ID=<fill in client id>
 LAMASSU_BOLT_CLIENT_PASSWORD=<fill in password>
 
+# x2gbfs Credentials
 # User and password from Deer
 DEER_USER=
 DEER_PASSWORD=
+# User and password from VOI/Raumobil
+VOI_USER=
+VOI_PASSWORD=
 
 # A random password which will be used for the postgresql database which is used by Dagster. Should be long and should not contain special
 # signs.
