--- a/.env
+++ b/.env
@@ -25,6 +25,7 @@ X2GBFS_IMAGE=ghcr.io/mobidata-bw/x2gbfs:latest
 DEER_API_URL=https://deer.fleetster.de
 DEER_USER=api_user@nvbw.de
 DEER_PASSWORD=secret
+VOI_API_URL=https://lsd.raumobil.net/Broker/grid?platform=mobidata-bw&source=voi&type=eScooter&hashes=u0ty,u0tz
 
 # dagster variables
 DAGSTER_POSTGRES_IMAGE=postgres:15.4-bullseye
