add pgbouncer service

--- a/.env
+++ b/.env
@@ -46,6 +46,11 @@ IPL_GTFS_DB_POSTGRES_PASSWORD=password
 IPL_GTFS_DB_POSTGRES_DB=gtfs_importer
 IPL_GTFS_DB_POSTGRES_DB_PREFIX=gtfs
 
+# pgbouncer variables
+PGBOUNCER_IMAGE=bitnami/pgbouncer:1
+PGBOUNCER_POSTGRES_PORT=6432
+PGBOUNCER_POSTGRES_USER=postgres
+
 # gtfs-api variables
 IPL_GTFS_API_PORT=4000
 # todo
