--- a/.env.local.example
+++ b/.env.local.example
@@ -21,6 +21,9 @@ DEER_PASSWORD=
 VOI_USER=
 VOI_PASSWORD=
 
+# A random password for pgbouncer clients
+PGBOUNCER_POSTGRES_PASSWORD=XP1EdA6S0BHmybkC
+
 # A random password which will be used for the postgresql database which is used by Dagster. Should be long and should not contain special
 # signs in order to prevent escaping issues (eg: 32 chars alphanumeric).
 DAGSTER_POSTGRES_PASSWORD=boapaLEspBg6qhY8
